test-suite/negative/13_undefined_type.sysml
/**
 * NEGATIVE TEST: Reference to undefined type
 * EXPECTED ERROR: Name resolution error for undefined type
 * CATEGORY: Type/Resolution Errors
 */
package NegativeTests {
    part def Vehicle {
        attribute speed : UndefinedSpeedType;  // ERROR: UndefinedSpeedType not defined
    }
}
